[tool.poetry]
name = "sample-app-streamlit"
version = "0.1.0"
description = ""
authors = ["technicakidz <y.technicakidz08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
